// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success renders the page 1`] = `
<Fragment>
  <Title>
    Thanks for verifying your paid leave contributions
  </Title>
  <p>
    <Trans
      i18nKey="pages.employersOrganizationsSuccess.companyNameLabel"
      tOptions={
        Object {
          "company": "Company Name",
        }
      }
    />
    <br />
    <Trans
      i18nKey="pages.employersOrganizationsSuccess.employerIdNumberLabel"
      tOptions={
        Object {
          "ein": "11-111111",
        }
      }
    />
  </p>
  <p>
    <Trans
      components={
        Object {
          "learn-more-link": <a
            href="https://www.mass.gov/how-to/creating-an-employer-account-to-review-paid-family-and-medical-leave-pfml-applications"
            rel="noopener"
            target="_blank"
          />,
        }
      }
      i18nKey="pages.employersOrganizationsSuccess.instructions"
    />
  </p>
  <Button
    onClick={[Function]}
  >
    Continue
  </Button>
</Fragment>
`;

exports[`Success renders the page 2`] = `
Array [
  <strong
    key="strong-0"
  >
    Organization:
  </strong>,
  " Company Name",
]
`;

exports[`Success renders the page 3`] = `
Array [
  <strong
    key="strong-0"
  >
    Employer ID number (EIN):
  </strong>,
  " 11-111111",
]
`;

exports[`Success renders the page 4`] = `
Array [
  "Your account has been verified. It may take up to 15 minutes for our systems to update so that you can log in and review applications. If anyone else on your team needs to review applications, they’ll also need to complete the ",
  <a
    href="https://www.mass.gov/how-to/creating-an-employer-account-to-review-paid-family-and-medical-leave-pfml-applications"
    key="1"
    rel="noopener"
    target="_blank"
  >
    verification process
  </a>,
  ".",
]
`;
